<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">成果累计番茄钟</string>
    <string name="new_task_title">新建任务</string>
    <string name="clock_title">番茄钟</string>

    <string name="setup_btn_text">设置</string>
    <string name="new_btn_text">新任务</string>
    <string name="random_tomato_text">零散番茄</string>

    <string name="tomato_num_label">累计番茄：</string>
    <string name="ok_text">确定</string>
    <string name="cancel_text">取消</string>
    <string name="start_text">开始</string>
    <string name="back_text">返回</string>
    <string name="new_task_hint_text">输入新的任务名称</string>
    <string name="new_task_warning">任务名称不能为空！</string>
    <string name="repeat_task_error">新建任务和已有任务重名！</string>
</resources>
